Fixed autosuggest not suggesting everything. Moved autosuggest z-index up

--- a/styles.css
+++ b/styles.css
@@ -311,6 +311,7 @@
     margin: 0 0 0 -2%;
     width: 250px;
     display: none;
+    z-index: 1;
 }
 
 .auto-suggest-items{
